testdata/step_22/valid/global_arr.c
int a[3];

int main() {
    a[0] = 6;
    a[1] = 7;
    a[2] = 8;
    return a[1];
}