testdata/step_22/parse_err/global_arr_variable_len.c
int len = 3;
int a[len];

int main() {
    return 0;
}